# pymusicrecommender

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
main/: get_lyrics_data.ipynb  get_lyrics_data.py  get_song_data.py  make_artist_table.py  make_song_table.py  sentiment_analysis.py  spotify.py
main/model/: sentiment_analysis.py
main/scrape/: make_artist_list.py  make_artist_table.py  make_song_table.py
pysicrec/: __init__.py  scraping.py  string_cleaner.py  webscraping.py
pysicrec/datamart/: Datamart.py
