[tool.poetry]
name = "pyscirec"
version = "0.1.0"
description = ""
authors = ["William Espinoza <wmespi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.23.0"
pandas = "^2.2.1"
requests = "^2.31.0"
lyricsgenius = "^3.0.1"
pyspark = "^3.5.1"
bertopic = "^0.16.0"
scikit-learn = "^1.4.1.post1"
langchain-community = "^0.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
